--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "js-base64": "^3.7.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
     "path": "^0.12.7",
