--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ DB_HOST=
 DB_USER= 
 DB_PASSWORD= 
 DB_NAME= 
+
+
+transaction_prefix = 
+case_insensitive = 
+expiration_date = 
+api_key = 
+secure_token = 
+url_webhook =  
