--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.8.0",
     "path": "^0.12.7",
+    "query-string": "^7.1.1",
     "routing-controllers": "^0.9.0",
     "socket.io": "^4.5.0",
     "uuid": "^8.3.2",
